--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ ul {
   color: #dedede;
 }
 a:link {
-  color: #dedede;
+  color: #29c294;
   background-color: transparent;
   text-decoration: none;
 }
@@ -68,23 +68,24 @@ a:hover {
 <br>
 <h3 style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></h3>
 
-<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes.<br>
+<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes.<br>
 <br>
 
 <h3>Sledi markaciji, če jih ni se vrni nazaj?</h3>
-<p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Nekaj popularnih primerov - Veliki Draški vrh, Krnčica, Zadnjiški Ozebnik, Grušnica, ... Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, gor in dol preko prelaza Vršič, po Krasu, dolini Glinščice, po poteh ozkotirne železnice v Idrijo ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000, na papirju pa v najboljšem primeru 1:25.000 in zavita pot tako hitro postane ravna črta. Seveda nam GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za lastno lokacijo. Lep primer je bivakiranje skupine planincev v bližini koče na Snežniku, ker jih je ujelo slabo vreme in niso vedeli kje je gor in kje dol, kaj šele kje je koča. Shit happens in takrat je lepo biti založen z vsem. Tudi s toplimi oblačili. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon. Analizo terena naj dela človek, ne računalnik.</p>
+<p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Nekaj popularnih primerov - Veliki Draški vrh, Krnčica, Zadnjiški Ozebnik, Grušnica, ... Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000, na papirju pa v najboljšem primeru 1:25.000 in zavita pot tako hitro postane ravna črta. Seveda nam GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za lastno lokacijo. Shit happens in takrat je lepo biti založen z vsem. Tudi s toplimi oblačili. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon. Analizo terena naj dela človek, ne računalnik.</p>
 
 <h3>PZS in ostali viri podatkov</h3>
-<p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikacije Locus in Avenza.</p>
-<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo posamezniki. Več prostovoljcev > <b>boljši bodo podatki v vseh aplikacijah.</b> Tudi pot na Triglav je moral nekdo vrisati in s pojavom lidar posnetkov je to že stvar natančnosti pol metra ali manj. Prednost vektorskih zbirk pred klasični kartografskimi rastrskimi produkti (npr PZS karte) je posodabljanje. Stroški revizije zemljevida in ponovne izdelave so neprimerno večji in zato se nove verzije izdelajo na več let. V OSM so na voljo čez nekaj ur vsem na svetu, a brez uredniške revizije.</p> 
+<p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikaciji Locus in Avenza.</p>
+<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo posamezniki. Več prostovoljcev > <b>boljši bodo podatki v vseh aplikacijah.</b> Prednost vektorskih zbirk pred klasični kartografskimi rastrskimi produkti (npr PZS karte) je posodabljanje. Stroški revizije zemljevida in ponovne izdelave so neprimerno večji in zato se nove verzije izdelajo na več let. V OSM so na voljo čez nekaj ur, a brez uredniške revizije.</p> 
 
-<p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. </p>
-<p>Velika večina aplikacij je zmes vsega in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo. Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve na terenu ter potešijo radovednost glede imena vrhov in oddaljenosti do naslednje točke. Velik minus imajo vse funkcije, ki zahtevajo omogočen prenos podatkov. Še en nasvet - sam ne beležim prehojene poti/aktivnosti z aplikacijo. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Če beležim sled je to naloga pametne ure.</p>
+<p>Velika večina aplikacij nudi enake reči in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo in vojsko razvijalcev. Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve ter potešijo radovednost oddaljenosti do naslednje točke. Osnovna raba aplikacije je predvsem prikaz položaja.
+<br>
+Še en nasvet - sam ne beležim prehojene poti/aktivnosti z aplikacijo. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Če beležim sled je to naloga pametne ure.</p>
 
 <h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
 <h3>Orux</h3>
-<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo tudi "veliki" ponudniki (v času, ko sploh še niso obstajali). To so prikaz kartografskih podlag brez povezave, beleženje točk, beleženje točk s slikami in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti - če nam orodje ni všeč ga skrijemo, da ne zaseda prostora. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, iščemo po vsebini zemljevida (točke), menjamo simbologijo iz pohodništva v kolesarjenje, itd. Nudi tudi odčitavanje koordinat v različnih zapisih za vse, ki imamo raje metrični sistem namesto stopinj. <br>
-Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, itd. Je zgolj in le kartografska aplikacija. In ravno to je mogoče razlog zakaj je tako priljubljen.
+<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo tudi "veliki" ponudniki (v času, ko sploh še niso obstajali). Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter tudi za delovne naloge. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, iščemo po vsebini zemljevida, uvažamo točke, ustvarjamo virtualne prostorske ograje, menjamo simbologijo iz pohodništva v kolesarjenje, itd. Nudi tudi odčitavanje koordinat v različnih zapisih za vse, ki imamo raje metrični sistem namesto stopinj. <br>
+Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, itd. Je zgolj in le kartografska aplikacija.
 </p>
 <img src="slike\azimut.jpg" height="600">
 <h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do izbrane lokacije - 830m in smer 339 stopinj. Meni najljubša funkcija v zelo slabem vremenu, ponoči ali v 99% primerih zgolj preverjanje razdalje do naslednjega razpotja. Smer in razdalja kjerkoli.</h5>
@@ -102,7 +103,7 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin - od zgodovinskih do tematskih kart. V njej je mogoče kupiti tako PZS karte kot Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost nista na razpolago v Locus trgovini. Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte. Vektorske karte imajo številne prednosti (iskanje po vsebini karte, prilagajanje izgleda, ...) in škoda, da jih Avenza ne podpira.</p>
 
 <h3>Apple IOS?</h3>
-<p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. Locus ni na voljo za IOS. Avenza je. </p>
+<p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. Locus ni na voljo za IOS. </p>
 
 <h2>Namestitev OruxMaps/Locus</h2>
 <p><b>Google Play trgovina</b></p>
@@ -169,7 +170,7 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <br>
 <h1>Primerjava</h1>
 <h3>maPZS</h3>
-<p>PZS poleg kart nudi tudi spletni pregledovalnik, ki ga lahko shranimo na telefon ter prenašamo zemljevide brez povezave. Podlaga je skromnejša (ter derivat OSM).</p>
+<p>PZS poleg kart nudi tudi spletni pregledovalnik, ki ga lahko shranimo na telefon ter prenašamo zemljevide brez povezave. Podlaga je skromnejša (ter derivat OSM), sloj planinskih poti je mestoma zelo skromen v natančnosti.</p>
 <img src="slike\mapzs.jpg" height="600">
 
 <h3>Maps.me</h3>
@@ -189,13 +190,19 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <h3>Outdooractive, Bergfex, Komoot,...</h3>
 <p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur.</p>
 
-<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
+<img src="slike\outdoor1.jpg" height="600">
 
-<p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal Outdooractive, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... </p>
+<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Milijonskih vložkov ne moremo primerjati s hobi projektom enega razvijalca. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. S kartografskega vidika so jim ostale aplikacije povsem konkurenčne.</p>
+<img src="slike\bergfex.jpg" height="600">
+
+<p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v aplikacijo je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali celo nemščini.</p>
+
+<h3>Načrtovanje doma</h3>
+<p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal Outdooractive, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... prav tako lahko brezplačno pregledujemo ture v zgoraj omenjenih aplikacijah. </p>
 <img src="slike\outdoor.jpg" height="600">
 <p>Višinski profil poti prikazuje tudi podatek o podlagi - ali je steza, pot, tlakovana, itd...vir vseh teh atributov je vestno delo tisočih prostovoljev, ki urejajo OSM.</p>
 <br>
-<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b> V teh časih pozabljeni ampak tiskani planinski vodniki z naborom tur so odlična stvar (in čudovito darilo).</p>
+<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b></p>
 
 <h1>Imena vrhov?</h1>
 <p>Meni najljubša je (plačljiva) Peak finder aplikacija. <a href="https://www.peakfinder.org/en/mobile">LINK</a></p>
