--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ a:hover {
 
 <br>
 <h3 style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></h3>
-
+<br>
 <p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes.<br>
 <br>
 
 <h3>Sledi markaciji, če jih ni se vrni nazaj?</h3>
-<p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Nekaj popularnih primerov - Veliki Draški vrh, Krnčica, Zadnjiški Ozebnik, Grušnica, ... Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000, na papirju pa v najboljšem primeru 1:25.000 in zavita pot tako hitro postane ravna črta. Seveda nam GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za lastno lokacijo. Shit happens in takrat je lepo biti založen z vsem. Tudi s toplimi oblačili. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon. Analizo terena naj dela človek, ne računalnik.</p>
+<p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Nekaj popularnih primerov - Veliki Draški vrh, Krnčica, Zadnjiški Ozebnik, Grušnica, ... Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000, na papirju pa v najboljšem primeru 1:25.000 in zavita pot tako hitro postane ravna črta. Seveda nam GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za lastno lokacijo. Nesreča ne počiva in takrat je lepo biti založen z vsem. Tudi s toplimi oblačili. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon.</p>
 
 <h3>PZS in ostali viri podatkov</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikaciji Locus in Avenza.</p>
@@ -81,7 +81,8 @@ a:hover {
 <p>Velika večina aplikacij nudi enake reči in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo in vojsko razvijalcev. Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve ter potešijo radovednost oddaljenosti do naslednje točke. Osnovna raba aplikacije je predvsem prikaz položaja.
 <br>
 Še en nasvet - sam ne beležim prehojene poti/aktivnosti z aplikacijo. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Če beležim sled je to naloga pametne ure.</p>
-
+<img src="slike\outdoorkarta.jpg" height="600">
+<p>Primer: Outdooractive oglašuje, da v PRO naročnini dobite tudi dostop do njihove posebne Outdooractive karte. Vse lepo in prav ampak Slovenije ni v tej zbirki. Namesto tega je uporabljen brezplačen OpenStreetMap.</p>
 <h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
 <h3>Orux</h3>
 <p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo tudi "veliki" ponudniki (v času, ko sploh še niso obstajali). Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter tudi za delovne naloge. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, iščemo po vsebini zemljevida, uvažamo točke, ustvarjamo virtualne prostorske ograje, menjamo simbologijo iz pohodništva v kolesarjenje, itd. Nudi tudi odčitavanje koordinat v različnih zapisih za vse, ki imamo raje metrični sistem namesto stopinj. <br>
