--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a:hover {
 <br>
 Še en nasvet - sam ne beležim prehojene poti/aktivnosti z aplikacijo. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Če beležim sled je to naloga pametne ure.</p>
 <img src="slike\outdoorkarta.jpg" height="600">
-<p>Primer: Outdooractive oglašuje, da v PRO naročnini dobite tudi dostop do njihove posebne Outdooractive karte. Vse lepo in prav ampak Slovenije ni v tej zbirki. Namesto tega je uporabljen brezplačen OpenStreetMap.</p>
+<p>Primer obljube: Outdooractive oglašuje, da v PRO naročnini dobite tudi dostop do njihove Outdooractive karte. Vse lepo in prav ampak Slovenije ni v tej zbirki. Na območju naše države je prikazan brezplačen OpenStreetMap.</p>
 <h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
 <h3>Orux</h3>
 <p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo tudi "veliki" ponudniki (v času, ko sploh še niso obstajali). Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter tudi za delovne naloge. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, iščemo po vsebini zemljevida, uvažamo točke, ustvarjamo virtualne prostorske ograje, menjamo simbologijo iz pohodništva v kolesarjenje, itd. Nudi tudi odčitavanje koordinat v različnih zapisih za vse, ki imamo raje metrični sistem namesto stopinj. <br>
