--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 
 
 <h3>Outdooractive, Bergfex, Komoot,...</h3>
-<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur.</p>
+<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. Outdooractive nudi tudi prepoznavanje vrhov.</p>
 
 <img src="slike\outdoor1.jpg" height="600">
 
@@ -204,6 +204,20 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <p>Višinski profil poti prikazuje tudi podatek o podlagi - ali je steza, pot, tlakovana, itd...vir vseh teh atributov je vestno delo tisočih prostovoljev, ki urejajo OSM.</p>
 <br>
 <p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b></p>
+
+<h1>Končna odločitev?</h1>
+<p>Kot vedno je odločitev lažja, če ji pripišemo cenik. Vse tri vam bodo enako kvalitetno služile pri orientaciji v naravi, pričakovano bo najdražja imela še tisti ekstra fancy dodatek brez katerega lahko brez težav živimo.</p>
+
+<h3>Popolnoma brezplačno</h3>
+<p>Orux. Brez konkurence. V primeru, da želite kartirati, ga uporabljati za službene naloge, vanj umestiti lastne karte, prikazovati SHP, imeti spletne karte WMS, itd...Kot rečeno. Brez konkurence.</p>
+
+<h3>Enkratni nakup</h3>
+<p>Locus. Zaradi trgovine kart. Mogoče celo Avenza (sploh, če imate IOS) vendar ne podpira vektorskih kart. Če tolerirate reklame in uporabljate OpenAndroMaps karte potem je tudi Locus brezplačen. </p>
+
+<h3>Mesečna naročnina</h3>
+<p>Outdooractive. Zakaj ne Bergfex? Ker je vsebinsko (kartografsko) narejen za Avstrijo. Outdooractive dobite za 30€ letno in imate čudovit načrtovalnik poti. Nimate pa svobode dodajanja lastnih kart ampak roko na srce - za naročnino pričakujem tudi storitev.</p>
+
+<p>Sam imam v lasti tako Locus kot Outdooractive ter uživam v obeh. P.S. na terenu je 99,9% časa v uporabi Orux.</p>
 
 <h1>Imena vrhov?</h1>
 <p>Meni najljubša je (plačljiva) Peak finder aplikacija. <a href="https://www.peakfinder.org/en/mobile">LINK</a></p>
